 17-Mar-2020  V0.970 Add separate primary citation category and offset for zero based sequence database references
 24-Mar-2020  V0.971 Add support for rcsb_chem_comp_annotation and various fixes for schema builder.
 27-Mar-2020  V0.972 Add support for rcsb_repository_holdings_removed.repository_content_types
  1-Apr-2020  V0.973 Add test cases for pdbx_audit_revision_details.description
  1-Apr-2020  V0.974 Add test cases for RESID annotations
  5-Apr-2020  V0.975 Adjustments to logging details for sequence processing
  7-Apr-2020  V0.976 Add min/max for consolidated diffraction wavelength details
  8-Apr-2020  V0.977 Adjust handling of nested contexts for subcategories.
 17-Apr-2020  V0.978 Add rcsb_accession_info.has_released_experimental_data
 27-Apr-2020  V0.979 Adjustments for remediated carbohydrate data files, leave BIRD_* annotations solely in definition collections.
 30-Apr-2020  V0.980 New NMR repo holdings content types, specific configuration option added for ed maps list
  2-May-2020  V0.981 Restore out-of-sync repository holdings data processing module and update related tests
  8-May-2020  V0.982 Adding support for context_attribute_values and search path schema extensions.
 13-May-2020  V0.983 Adjustments to suppress materialization of an assembly of deposited coordinates
 15-May-2020  V0.984 Adjustments to suppress logging of missing assembly data
 16-May-2020  V0.985 Adding test case for branched entity replace test
 18-May-2020  V0.986 More complete object purge for loadType replace, explicitly filter heavy atoms in counting stats.
 19-May-2020  V0.987 Reduce verbose logging of memory usage and use alternative $regex filter for mongo purging
 21-May-2020  V0.988 Added additional methods to export search group and context statistics
 22-May-2020  V0.989 Adding auth to entity polymer sequence residue mapping item.
  3-Jun-2020  V0.990 Updating dependencies for rcsb.utils.validation and validation test conditions.